<resources>
    <string name="app_name">My Weather App</string>
    <string name="search_description">Изменить город</string>
    <string name="weather_icon">Иконка погоды</string>
    <string name="rainfall">Осадки</string>
    <string name="wind">Ветер</string>
    <string name="humidity">Влажность</string>
    <string name="default_city">Москва</string>
    <string name="button_forecast">Прогноз на 7 дней</string>
    <string name="clouds">Облачность</string>
    <string name="enter_city_hint">Название города</string>
    <string name="enter_city_title">Введите город</string>
    <string name="necessary_field_warning">Обязательное поле</string>
    <string name="cancel_button">Отмена</string>
    <string name="detail_forecast">Подробный прогноз</string>

    <string-array name="conditions">
        <item>Ясно</item>
        <item>Малооблачно</item>
        <item>Облачно</item>
        <item>Тучи</item>
        <item>Ливень</item>
        <item>Дождь</item>
        <item>Гроза</item>
        <item>Снег</item>
        <item>Туман</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_internet_connection_text">Нет соединения с интернетом</string>

</resources>