<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_dimen"
    android:background="@color/main"
    tools:context=".screens.main.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewSearch"
        android:contentDescription="@string/search_description"
        android:src="@drawable/ic_search"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCity"
        tools:text="Москва"
        app:layout_constraintTop_toBottomOf="@id/imageViewSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="italic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewData"
        tools:text="31 мая"
        app:layout_constraintTop_toBottomOf="@id/textViewCity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/currentLayout"
        app:layout_constraintTop_toBottomOf="@id/textViewData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:id="@+id/imageViewIcon"
            android:contentDescription="@string/weather_icon"
            app:layout_constraintTop_toBottomOf="@id/textViewData"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@drawable/default_weather"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/default_dimen"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/default_dimen"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTemp"
                tools:text="28 C"
                android:textColor="@color/white"
                android:textSize="46sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewDescription"
                android:layout_gravity="center"
                android:gravity="center"
                tools:text="Сильный дождь"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemRainFall"
        android:backgroundTint="@color/white_transparent"
        app:strokeWidth="0dp"
        android:layout_marginVertical="@dimen/small_dimen"
        app:cardCornerRadius="@dimen/default_dimen"
        app:layout_constraintTop_toBottomOf="@id/currentLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_dimen">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imageViewRainIcon"
                android:importantForAccessibility="no"
                android:src="@drawable/rainfall"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rainfall"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/default_dimen"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageViewRainIcon"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewRainfall"
                tools:text="3 мм"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginEnd="@dimen/small_dimen"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemWind"
        android:layout_marginVertical="@dimen/small_dimen"
        android:backgroundTint="@color/white_transparent"
        app:strokeWidth="0dp"
        app:cardCornerRadius="@dimen/default_dimen"
        app:layout_constraintTop_toBottomOf="@id/itemRainFall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_dimen">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imageViewWindIcon"
                android:importantForAccessibility="no"
                android:src="@drawable/wind"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/default_dimen"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageViewWindIcon"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewWindSpeed"
                tools:text="3 м/c"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginEnd="@dimen/small_dimen"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemHumidity"
        android:layout_marginVertical="@dimen/small_dimen"
        android:backgroundTint="@color/white_transparent"
        app:strokeWidth="0dp"
        app:cardCornerRadius="@dimen/default_dimen"
        app:layout_constraintTop_toBottomOf="@id/itemWind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_dimen">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imageViewHumidityIcon"
                android:importantForAccessibility="no"
                android:src="@drawable/humidity"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/default_dimen"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageViewHumidityIcon"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewHumidity"
                tools:text="30 %"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginEnd="@dimen/small_dimen"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemClouds"
        android:backgroundTint="@color/white_transparent"
        app:strokeWidth="0dp"
        android:layout_marginVertical="@dimen/small_dimen"
        app:cardCornerRadius="@dimen/default_dimen"
        app:layout_constraintTop_toBottomOf="@id/itemHumidity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_dimen">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imageViewCloudsIcon"
                android:importantForAccessibility="no"
                android:src="@drawable/clouds"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clouds"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/default_dimen"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageViewCloudsIcon"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewClouds"
                tools:text="30 %"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginEnd="@dimen/small_dimen"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>